fixed btn img shifting on click

--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,10 @@ section > ul {
 .btnDiv {
     margin: auto;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 .btnDiv span {
@@ -306,18 +310,18 @@ section > ul {
 
 .sampleWorkPage button {
     background-color: #fc616b;
-    margin-inline: 5px;
     border: none;
     border-radius: 4px;
     color: #322d30;
     font-weight: bold;
     font-size: 20px;
-    aspect-ratio: 1 / 1;
     width: 30px;
     height: 30px;
     box-shadow: 1px 1px 1px 0px rgb(130, 116, 116);  /* offset-x offset-y blur-radius spread-radius color; */
-    display: inline-block;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button:active {
@@ -331,8 +335,7 @@ button:focus {
 
 .sampleWorkPage button img {
     height: 18px;
-    width: auto;
-    vertical-align: middle;
+    width: 18px;
 }
 
 /* right side --------------------- */
